# VK-internship-task

./: CMakeLists.txt  README.md  main.cpp
include/: graph.h
src/: graph.cpp  main.cpp
test/: test.cpp
